contig-derive/tests/ui/wrong_field_attr.stderr
error: #[contig] requires named fields
 --> tests/ui/wrong_field_attr.rs:4:1
  |
4 | struct WrongAttr(f64);
  | ^^^^^^
